# ML-Kernels

./: README.md  fake_quantize.py  quantized_matmal.py
cuda/: CMakeLists.txt  build_and_profile_conv2d.sh  build_and_profile_conv3d.sh  build_and_profile_gemm.sh
cuda/src/: conv_2d.cu  conv_2d.h  gemm.cu  gemm.h
cuda/test/: conv2d_test.cpp  conv3d_test.cpp  depthwise_conv3d_test.cpp  gemm_test.cpp  utils.h
pytorch/: conv3d.py
triton/: add.py  matmul.py  softmax.py
trt/: conv3d.py
